--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "vite preview"
+    "dev": "vite",                           
+    "build": "vite build",                    
+    "lint": "eslint .",                        
+    "preview": "vite preview",                
+    "start": "vite preview --port 5000"     
   },
   "dependencies": {
     "aos": "^2.3.4",
