--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "e-learning",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0 <20"
+  },
   "scripts": {
     "dev": "vite",                           
     "build": "vite build",                    
@@ -33,8 +36,6 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.9"
