--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-player": "^2.14.2",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
