--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.18.1",
+    "laravel-echo": "^2.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
+    "pusher-js": "^8.4.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-loading-skeleton": "^3.5.0",
     "react-player": "^2.14.2",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
